Fixed problem with NEW_ROW and added overflow

--- a/filecomparator-front/src/components/UI/circle/Circles.module.css
+++ b/filecomparator-front/src/components/UI/circle/Circles.module.css
@@ -16,3 +16,6 @@
     top: -2.95vw;
     left: -2.95vw;
 }
+.overDiv {
+    overflow: scroll;
+}
